tests/compilation/local.stderr
error[E0277]: `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
 --> tests/compilation/local.rs:7:17
  |
7 |     assert_send(&f);
  |     ----------- ^^ `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `dyn_fn::LocalDynFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>`
  = help: the trait `Send` is implemented for `dyn_fn::sync::DynFnImpl<'_, Arg, Ret, FnStorage, false>`
note: required because it appears within the type `dyn_fn::LocalDynFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
 --> src/sync.rs
  |
  | pub struct LocalDynFn<
  |            ^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/compilation/local.rs:3:19
  |
3 | fn assert_send<T: Send>(_: &T) {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
 --> tests/compilation/local.rs:8:17
  |
8 |     assert_sync(&f);
  |     ----------- ^^ `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
  |     |
  |     required by a bound introduced by this call
  |
  = help: within `dyn_fn::LocalDynFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>`
  = help: the trait `Send` is implemented for `dyn_fn::sync::DynFnImpl<'_, Arg, Ret, FnStorage, false>`
note: required because it appears within the type `dyn_fn::LocalDynFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
 --> src/sync.rs
  |
  | pub struct LocalDynFn<
  |            ^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/compilation/local.rs:4:19
  |
4 | fn assert_sync<T: Send>(_: &T) {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
  --> tests/compilation/local.rs:12:17
   |
12 |     assert_send(&f);
   |     ----------- ^^ `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>`
   = help: the trait `Send` is implemented for `dyn_fn::sync::DynFnImpl<'_, Arg, Ret, FnStorage, false>`
note: required because it appears within the type `dyn_fn::LocalDynFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
  --> src/sync.rs
   |
   | pub struct LocalDynFnMut<
   |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
  --> tests/compilation/local.rs:13:17
   |
13 |     assert_sync(&f);
   |     ----------- ^^ `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `dyn_fn::sync::DynFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>`
   = help: the trait `Send` is implemented for `dyn_fn::sync::DynFnImpl<'_, Arg, Ret, FnStorage, false>`
note: required because it appears within the type `dyn_fn::LocalDynFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
  --> src/sync.rs
   |
   | pub struct LocalDynFnMut<
   |            ^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `dyn_fn::sync::DynFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
  --> tests/compilation/local.rs:17:17
   |
17 |     assert_send(&f);
   |     ----------- ^^ `dyn_fn::sync::DynFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `dyn_fn::sync::DynFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>`
   = help: the trait `Send` is implemented for `dyn_fn::sync::DynFnOnceImpl<'_, Arg, Ret, FnStorage, false>`
note: required because it appears within the type `dyn_fn::LocalDynFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
  --> src/sync.rs
   |
   | pub struct LocalDynFnOnce<
   |            ^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `dyn_fn::sync::DynFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
  --> tests/compilation/local.rs:18:17
   |
18 |     assert_sync(&f);
   |     ----------- ^^ `dyn_fn::sync::DynFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`, the trait `Send` is not implemented for `dyn_fn::sync::DynFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, true>`
   = help: the trait `Send` is implemented for `dyn_fn::sync::DynFnOnceImpl<'_, Arg, Ret, FnStorage, false>`
note: required because it appears within the type `dyn_fn::LocalDynFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>>`
  --> src/sync.rs
   |
   | pub struct LocalDynFnOnce<
   |            ^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
  --> tests/compilation/local.rs:22:17
   |
22 |     assert_send(&f);
   |     ----------- ^^ `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>`
   = help: the trait `Send` is implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, Arg, Ret, FnStorage, FutureStorage, dyn_fn::r#async::DynFutureSend>`
note: required because it appears within the type `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFn<
   |            ^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
  --> tests/compilation/local.rs:23:17
   |
23 |     assert_sync(&f);
   |     ----------- ^^ `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>`
   = help: the trait `Send` is implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, Arg, Ret, FnStorage, FutureStorage, dyn_fn::r#async::DynFutureSend>`
note: required because it appears within the type `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFn<
   |            ^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be shared between threads safely
  --> tests/compilation/local.rs:24:17
   |
24 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Sync` is not implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>`
   = help: the trait `Sync` is implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, Arg, Ret, FnStorage, FutureStorage, dyn_fn::r#async::DynFutureSend>`
note: required because it appears within the type `dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFn<
   |            ^^^^^^^^^^^^^^^
   = note: required for `&dyn_fn::LocalDynAsyncFn<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>` to implement `Send`
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ___________________________________________________________________^
   | |         unsafe { self.0.call(arg).await }
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:24:17
   |
24 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `RawOrBox<128, 8>`
  --> src/storage.rs
   |
   | pub enum RawOrBox<const SIZE: usize, const ALIGN: usize = { align_of::<usize>() }>
   |          ^^^^^^^^
note: required because it appears within the type `storage::StorageImpl<RawOrBox<128, 8>>`
  --> src/storage.rs
   |
   | pub(crate) struct StorageImpl<S: Storage> {
   |                   ^^^^^^^^^^^
note: required because it appears within the type `Option<storage::StorageImpl<RawOrBox<128, 8>>>`
  --> $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   |          ^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async unsafe fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________________^
   | |         let mut future = None;
   | |         let res = unsafe { (self.call)(self.func.ptr(), arg, &mut future, PhantomData) };
   | |         res.get().await
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ___________________________________________________________________^
   | |         unsafe { self.0.call(arg).await }
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut ()` cannot be sent between threads safely
  --> tests/compilation/local.rs:24:17
   |
24 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `dyn_fn::storage::Raw<128, 8>`
  --> src/storage.rs
   |
   | pub struct Raw<
   |            ^^^
note: required because it appears within the type `RawOrBox<128, 8>`
  --> src/storage.rs
   |
   | pub enum RawOrBox<const SIZE: usize, const ALIGN: usize = { align_of::<usize>() }>
   |          ^^^^^^^^
note: required because it appears within the type `storage::StorageImpl<RawOrBox<128, 8>>`
  --> src/storage.rs
   |
   | pub(crate) struct StorageImpl<S: Storage> {
   |                   ^^^^^^^^^^^
note: required because it appears within the type `Option<storage::StorageImpl<RawOrBox<128, 8>>>`
  --> $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   |          ^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async unsafe fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________________^
   | |         let mut future = None;
   | |         let res = unsafe { (self.call)(self.func.ptr(), arg, &mut future, PhantomData) };
   | |         res.get().await
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ___________________________________________________________________^
   | |         unsafe { self.0.call(arg).await }
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `(dyn Future<Output = &str> + 'static)` cannot be sent between threads safely
  --> tests/compilation/local.rs:24:17
   |
24 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `(dyn Future<Output = &str> + 'static)` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `(dyn Future<Output = &str> + 'static)`
   = note: required because it appears within the type `&mut (dyn Future<Output = &str> + 'static)`
note: required because it appears within the type `Pin<&mut (dyn Future<Output = &str> + 'static)>`
  --> $RUST/core/src/pin.rs
   |
   | pub struct Pin<Ptr> {
   |            ^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       async fn get(self) -> Ret {
   |  _______________________________^
   | |         match self {
   | |             Self::Return(ret) => ret,
   | |             Self::Future(future) => future.await,
   | |         }
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async unsafe fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________________^
   | |         let mut future = None;
   | |         let res = unsafe { (self.call)(self.func.ptr(), arg, &mut future, PhantomData) };
   | |         res.get().await
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ___________________________________________________________________^
   | |         unsafe { self.0.call(arg).await }
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
  --> tests/compilation/local.rs:28:17
   |
28 |     assert_send(&f);
   |     ----------- ^^ `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>`
   = help: the trait `Send` is implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, Arg, Ret, FnStorage, FutureStorage, dyn_fn::r#async::DynFutureSend>`
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnMut<
   |            ^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
  --> tests/compilation/local.rs:29:17
   |
29 |     assert_sync(&f);
   |     ----------- ^^ `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>`
   = help: the trait `Send` is implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, Arg, Ret, FnStorage, FutureStorage, dyn_fn::r#async::DynFutureSend>`
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnMut<
   |            ^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
  --> tests/compilation/local.rs:30:17
   |
30 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ----------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>`
   = help: the trait `Send` is implemented for `dyn_fn::r#async::DynAsyncFnImpl<'_, Arg, Ret, FnStorage, FutureStorage, dyn_fn::r#async::DynFutureSend>`
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnMut<
   |            ^^^^^^^^^^^^^^^^^^
   = note: required because it appears within the type `&mut dyn_fn::LocalDynAsyncFnMut<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  _______________________________________________________________________^
   | |         unsafe { self.0.call_mut(arg).await }
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:30:17
   |
30 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ----------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `RawOrBox<128, 8>`
  --> src/storage.rs
   |
   | pub enum RawOrBox<const SIZE: usize, const ALIGN: usize = { align_of::<usize>() }>
   |          ^^^^^^^^
note: required because it appears within the type `storage::StorageImpl<RawOrBox<128, 8>>`
  --> src/storage.rs
   |
   | pub(crate) struct StorageImpl<S: Storage> {
   |                   ^^^^^^^^^^^
note: required because it appears within the type `Option<storage::StorageImpl<RawOrBox<128, 8>>>`
  --> $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   |          ^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async unsafe fn call_mut<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________________________^
   | |         let mut future = None;
   | |         let res = unsafe { (self.call)(self.func.ptr_mut(), arg, &mut future, PhantomData) };
   | |         res.get().await
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  _______________________________________________________________________^
   | |         unsafe { self.0.call_mut(arg).await }
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut ()` cannot be sent between threads safely
  --> tests/compilation/local.rs:30:17
   |
30 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ----------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `dyn_fn::storage::Raw<128, 8>`
  --> src/storage.rs
   |
   | pub struct Raw<
   |            ^^^
note: required because it appears within the type `RawOrBox<128, 8>`
  --> src/storage.rs
   |
   | pub enum RawOrBox<const SIZE: usize, const ALIGN: usize = { align_of::<usize>() }>
   |          ^^^^^^^^
note: required because it appears within the type `storage::StorageImpl<RawOrBox<128, 8>>`
  --> src/storage.rs
   |
   | pub(crate) struct StorageImpl<S: Storage> {
   |                   ^^^^^^^^^^^
note: required because it appears within the type `Option<storage::StorageImpl<RawOrBox<128, 8>>>`
  --> $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   |          ^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async unsafe fn call_mut<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________________________^
   | |         let mut future = None;
   | |         let res = unsafe { (self.call)(self.func.ptr_mut(), arg, &mut future, PhantomData) };
   | |         res.get().await
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  _______________________________________________________________________^
   | |         unsafe { self.0.call_mut(arg).await }
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `(dyn Future<Output = &str> + 'static)` cannot be sent between threads safely
  --> tests/compilation/local.rs:30:17
   |
30 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `(dyn Future<Output = &str> + 'static)` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ----------------------------------------------------------------- within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `(dyn Future<Output = &str> + 'static)`
   = note: required because it appears within the type `&mut (dyn Future<Output = &str> + 'static)`
note: required because it appears within the type `Pin<&mut (dyn Future<Output = &str> + 'static)>`
  --> $RUST/core/src/pin.rs
   |
   | pub struct Pin<Ptr> {
   |            ^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       async fn get(self) -> Ret {
   |  _______________________________^
   | |         match self {
   | |             Self::Return(ret) => ret,
   | |             Self::Future(future) => future.await,
   | |         }
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async unsafe fn call_mut<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________________________^
   | |         let mut future = None;
   | |         let res = unsafe { (self.call)(self.func.ptr_mut(), arg, &mut future, PhantomData) };
   | |         res.get().await
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(&mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  _______________________________________________________________________^
   | |         unsafe { self.0.call_mut(arg).await }
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
  --> tests/compilation/local.rs:34:17
   |
34 |     assert_send(&f);
   |     ----------- ^^ `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>`
   = help: the trait `Send` is implemented for `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, Arg, Ret, FnStorage, FutureStorage, dyn_fn::r#async::DynFutureSend>`
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnOnce<
   |            ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
  --> tests/compilation/local.rs:35:17
   |
35 |     assert_sync(&f);
   |     ----------- ^^ `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`, the trait `Send` is not implemented for `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>`
   = help: the trait `Send` is implemented for `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, Arg, Ret, FnStorage, FutureStorage, dyn_fn::r#async::DynFutureSend>`
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnOnce<
   |            ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_sync`
  --> tests/compilation/local.rs:4:19
   |
 4 | fn assert_sync<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
  --> tests/compilation/local.rs:36:17
   |
36 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------ within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>, dyn_fn::r#async::LocalDynFuture>`
   = help: the trait `Send` is implemented for `dyn_fn::r#async::DynAsyncFnOnceImpl<'_, Arg, Ret, FnStorage, FutureStorage, dyn_fn::r#async::DynFutureSend>`
note: required because it appears within the type `dyn_fn::LocalDynAsyncFnOnce<'_, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)>, dyn_fn::storage::Box, RawOrBox<128, 8>>`
  --> src/async.rs
   |
   | pub struct LocalDynAsyncFnOnce<
   |            ^^^^^^^^^^^^^^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________^
   | |         self.0.call(arg).await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `NonNull<()>` cannot be sent between threads safely
  --> tests/compilation/local.rs:36:17
   |
36 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `NonNull<()>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------ within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `NonNull<()>`
note: required because it appears within the type `dyn_fn::storage::Box`
  --> src/storage.rs
   |
   | pub struct Box(NonNull<()>);
   |            ^^^
note: required because it appears within the type `RawOrBox<128, 8>`
  --> src/storage.rs
   |
   | pub enum RawOrBox<const SIZE: usize, const ALIGN: usize = { align_of::<usize>() }>
   |          ^^^^^^^^
note: required because it appears within the type `storage::StorageImpl<RawOrBox<128, 8>>`
  --> src/storage.rs
   |
   | pub(crate) struct StorageImpl<S: Storage> {
   |                   ^^^^^^^^^^^
note: required because it appears within the type `Option<storage::StorageImpl<RawOrBox<128, 8>>>`
  --> $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   |          ^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ______________________________________________________________________^
   | |         let mut future = None;
   | |         let call = unsafe { self.call.take().unwrap_unchecked() };
   | |         let res = unsafe { call(self.func.ptr_once(), arg, &mut future, PhantomData) };
   | |         res.get().await
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________^
   | |         self.0.call(arg).await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut ()` cannot be sent between threads safely
  --> tests/compilation/local.rs:36:17
   |
36 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------ within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `*mut ()`
note: required because it appears within the type `PhantomData<*mut ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `dyn_fn::storage::Raw<128, 8>`
  --> src/storage.rs
   |
   | pub struct Raw<
   |            ^^^
note: required because it appears within the type `RawOrBox<128, 8>`
  --> src/storage.rs
   |
   | pub enum RawOrBox<const SIZE: usize, const ALIGN: usize = { align_of::<usize>() }>
   |          ^^^^^^^^
note: required because it appears within the type `storage::StorageImpl<RawOrBox<128, 8>>`
  --> src/storage.rs
   |
   | pub(crate) struct StorageImpl<S: Storage> {
   |                   ^^^^^^^^^^^
note: required because it appears within the type `Option<storage::StorageImpl<RawOrBox<128, 8>>>`
  --> $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   |          ^^^^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ______________________________________________________________________^
   | |         let mut future = None;
   | |         let call = unsafe { self.call.take().unwrap_unchecked() };
   | |         let res = unsafe { call(self.func.ptr_once(), arg, &mut future, PhantomData) };
   | |         res.get().await
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________^
   | |         self.0.call(arg).await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `(dyn Future<Output = &str> + 'static)` cannot be sent between threads safely
  --> tests/compilation/local.rs:36:17
   |
36 |     assert_send(&f.call("test"));
   |     ----------- ^^^^^^^^^^^^^^^ `(dyn Future<Output = &str> + 'static)` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
  ::: src/async.rs
   |
   |     pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |     ------------------------------------------------------------ within this `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`
   |
   = help: within `impl Future<Output = <dyn_fn::higher_kinded_types::ඞ::ForLt<(dyn for<'ඞ> WithLifetime<'ඞ, Of = &'ඞ str> + 'static)> as ForLifetime>::Of<'_>>`, the trait `Send` is not implemented for `(dyn Future<Output = &str> + 'static)`
   = note: required because it appears within the type `&mut (dyn Future<Output = &str> + 'static)`
note: required because it appears within the type `Pin<&mut (dyn Future<Output = &str> + 'static)>`
  --> $RUST/core/src/pin.rs
   |
   | pub struct Pin<Ptr> {
   |            ^^^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       async fn get(self) -> Ret {
   |  _______________________________^
   | |         match self {
   | |             Self::Return(ret) => ret,
   | |             Self::Future(future) => future.await,
   | |         }
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(mut self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  ______________________________________________________________________^
   | |         let mut future = None;
   | |         let call = unsafe { self.call.take().unwrap_unchecked() };
   | |         let res = unsafe { call(self.func.ptr_once(), arg, &mut future, PhantomData) };
   | |         res.get().await
   | |     }
   | |_____^
note: required because it's used within this `async` fn body
  --> src/async.rs
   |
   |       pub async fn call<'a>(self, arg: Arg::Of<'a>) -> Ret::Of<'a> {
   |  __________________________________________________________________^
   | |         self.0.call(arg).await
   | |     }
   | |_____^
note: required by a bound in `assert_send`
  --> tests/compilation/local.rs:3:19
   |
 3 | fn assert_send<T: Send>(_: &T) {}
   |                   ^^^^ required by this bound in `assert_send`
